@@ -1,3 +1,6 @@
+2011-07-01 yusei
+* Set proper title to interaction workflow.
+
 2011-01-14 Ivan
 * Use Jquery
 
